<package format="2">
  <name>ork_renderer</name>
  <version>0.2.2</version>
  <description>Code that generates random views of an object</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com/recognition</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>assimp-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>freeimage</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libdevil-dev</build_depend>
  <build_depend>libosmesa6-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>sdl</build_depend>

  <exec_depend>assimp-dev</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>freeimage</exec_depend>
  <exec_depend>glut</exec_depend>
  <exec_depend>libdevil-dev</exec_depend>
  <exec_depend>libosmesa6-dev</exec_depend>
  <exec_depend>libxi-dev</exec_depend>
  <exec_depend>libxmu-dev</exec_depend>
  <exec_depend>sdl</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
